# catkin_ws_autonomous_tidy_up

./: .gitignore  README.md  READ_MEtheconstruct.md  run_local_master.sh  run_tiago_master.sh
bags/: instructions_run_bag.md
building_editor_models/bedroom_external_wall/: model.config  model.sdf
building_editor_models/bedroom_internal_walls/: model.config  model.sdf
building_editor_models/garage_external_wall/: model.config  model.sdf
building_editor_models/kitchen_living_room_walls/: model.config  model.sdf
configs_rviz/: autonomous_tidy_up.rviz
model_editor_models/: models_from_pal_robotics.txt
model_editor_models/Bed_mod/: model.config  model.sdf
model_editor_models/Crosley_Alarm_Clock_Vintage_Metal_mod/: model.config  model.sdf
model_editor_models/Fridge_mod/: model.config  model.sdf
model_editor_models/HingedDoor_mod/: model.config  model.sdf
model_editor_models/KitchenCountertop_mod2/: model.config  model.sdf
model_editor_models/LampAndStand_full_base/: model.config  model.sdf
model_editor_models/LampAndStand_mod/: model.config  model.sdf
model_editor_models/SquareShelf_mod/: model.config  model.sdf
model_editor_models/TrashBin_mod/: model.config  model.sdf
model_editor_models/Vanity_mod/: model.config  model.sdf  model_without_extension.sdf
model_editor_models/WhiteCabinet_mod/: model.config  model.sdf
model_editor_models/cardboard_box_mod2/: model.config  model.sdf
model_editor_models/cup_glass_test/: model.config  model.sdf
model_editor_models/cup_glass_test/meshes/: cup_glass.dae
model_editor_models/garage_door_poster/: model.config  model.sdf
model_editor_models/garage_door_poster/material/script/: garage_door_poster.material
model_editor_models/kitchen_table/: kitchen_table.sdf
model_editor_models/ufrgs_poster/: model.config  model.sdf
model_editor_models/ufrgs_poster/material/script/: ufrgs_poster.material
model_editor_models/uio_poster/: model.config  model.sdf
model_editor_models/uio_poster/material/script/: uio_poster.material
model_editor_models/wardrobe/: wardrobe.sdf
singularity_files/: READEME.md
src/autonomous_tidy_up/: CMakeLists.txt  package.xml
src/autonomous_tidy_up/cfg/: region.cfg  segment.cfg
src/autonomous_tidy_up/config/: padding.yaml  tiago_custom_motions.yaml
src/autonomous_tidy_up/include/autonomous_tidy_up/: autonomous_tidy_up.hpp
src/autonomous_tidy_up/launch/: mask_rcnn_73b2_kitchen_and_data_processing.launch  octomap_server.launch  pal_gazeboLOCAL.launch  run_autonomous_tidy_up.launch  tiago_gazeboLOCAL.launch  tiago_load_robot_model_for_bag.launch  tiago_map_server_real_robot.launch  tiago_simulation_gmapping.launch  tiago_simulation_new_map.launch  tiago_simulation_previous_map.launch
src/autonomous_tidy_up/maps/: map_lab.pgm
src/autonomous_tidy_up/maps/map_bedroom/: submap_0.pgm
src/autonomous_tidy_up/maps/map_complete_no_doors/: submap_0.pgm
src/autonomous_tidy_up/maps/map_garage/: submap_0.pgm
src/autonomous_tidy_up/maps/map_kitchen/: map.pgm
src/autonomous_tidy_up/src/: autonomous_tidy_up.cpp  camera_data_processing.cpp  metrics.cpp  octomap_and_planning_scene.cpp  thinning.cpp
src/autonomous_tidy_up/worlds/: garage_kitchen_bedroom.world  garage_kitchen_bedroom_no_doors.world
src/gazebo_ros_link_attacher-melodic-devel/: package.xml
src/gazebo_ros_link_attacher-melodic-devel/launch/: test_attacher.launch
src/gazebo_ros_link_attacher-melodic-devel/worlds/: small_officeMOD.world
src/moveit_grasps/: CMakeLists.txt
src/moveit_grasps/config_robot/: tiago_grasp_data.yaml
src/moveit_grasps/launch/: grasp_filter_demo.launch  grasp_generator_demo.launch  grasp_pipeline_demo.launch  grasp_poses_visualizer_demo.launch  load_tiago.launch  load_tiago_gazebo.launch  rviz.launch
src/moveit_grasps/launch/rviz/: grasps_funcionouALGOpipeline.rviz
src/moveit_grasps/src/demo/: grasp_pipeline_demo.cpp  grasp_pipeline_demoTENTATIVA.cpp  grasp_poses_visualizer_demo.cpp
